--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -1,16 +1,3 @@
-.cart {
-  background: #000000ee;
-  backdrop-filter: blur(8px);
-  display: none;
-  padding: 32px;
-  position: fixed;
-  right: 0px;
-  top: 0px;
-  width: 250px;
-  overflow-y: scroll;
-  z-index: 1;
-}
-
 .cart img {
   aspect-ratio: 16/9;
   width: 100%;
@@ -42,27 +29,15 @@
 }
 
 .cart-button {
-  align-items: center;
   background: #09f;
   border-radius: 9999px;
   cursor: pointer;
-  display: flex;
-  height: 32px;
-  justify-content: center;
-  padding: 4px;
   position: fixed;
-  right: 8px;
-  top: 8px;
+  right: 1rem;
+  top: 1rem;
   transition: all 0.3s ease;
-  width: 32px;
-  z-index: 9999;
 }
 
 .cart-button:hover {
   scale: 1.1;
-}
-
-.cart-button ~ input:checked ~ .cart {
-  height: 100%;
-  display: block;
 }
